--- a/jquery_select.html
+++ b/jquery_select.html
@@ -5,32 +5,54 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
 </head>
-<style>
-  button {
-    width: 300px;
-    height: 100px;
-  }
-
-  div {
-    width: 300px;
-    height: 100px;
-    background-color: red;
-  }
-</style>
 <body>
-  <button onclick="test()"></button>
-  <div id="test_obj"></div>
+  <ul id="list">
+  </ul>
 
-  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+  <ul>
+    <li id="0">USD</li>
+    <li id="1">JPY</li>
+    <li id="2">EUR</li>
+    <li id="3">GBP</li>
+  </ul>
+
   <script>
-    function test() {
-      
-      if( $('#test_obj').css('display') == 'block') {
-        $('#test_obj').css('display', 'none');
-      } else {
-        $('#test_obj').css('display', 'block');
+    var arr = [
+      {
+        CRCY_CD: 'USD',
+        TARGET_PRCIE: '1250.00',
+        AUTO_CHARGE: '100',
+        USE_YN: 'Y'  
+      },
+      {
+        CRCY_CD: 'JPY',
+        TARGET_PRCIE: '1250.00',
+        AUTO_CHARGE: '1000',
+        USE_YN: 'N'  
+      },
+      {
+        CRCY_CD: 'GBP',
+        TARGET_PRCIE: '1350.00',
+        AUTO_CHARGE: '300',
+        USE_YN: 'Y'
       }
+    ]
+    var ul = $('#list')
+    for(i=0; i<arr.length; i++) {   
+      if(arr[i].USE_YN == 'Y') {
+        ul.append('<h1>' + arr[i].CRCY_CD + '</h1>')
+        if(arr[i].CRCY_CD == 'USD') {
+          $('#0').css('display','none')
+        } else if(arr[i].CRCY_CD == 'JPY') {
+          $('#1').css('display','none')
+        } else if(arr[i].CRCY_CD == 'EUR') {
+          $('#2').css('display','none')
+        } else if(arr[i].CRCY_CD == 'GBP') {
+          $('#3').css('display','none')
+        }
+      } 
     }
   </script>
 </body>
